--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "tservice",
   "version": "0.0.1",
   "description": "Typescript for JService",
-  "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "watch": "nodemon -x ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/rhaldkhein/tservice/issues"
   },
-  "homepage": "https://github.com/rhaldkhein/tservice#readme"
+  "homepage": "https://github.com/rhaldkhein/tservice#readme",
+  "devDependencies": {
+    "shortid": "^2.2.15",
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3"
+  },
+  "dependencies": {
+    "object-hash": "^2.0.1"
+  }
 }
