--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "tservice",
   "version": "0.0.1",
   "description": "Typescript for JService",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "watch": "nodemon -x ts-node src/index.ts",
