--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,12 @@
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist"
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
