--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "lib": [
+      "es6"
+    ],
     "target": "es5",
     "module": "commonjs",
     "declaration": true,
