--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "jest --watch",
+    "play": "ts-node _play ",
     "test": "jest"
   },
   "repository": {
@@ -22,6 +23,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^24.0.24",
+    "@types/node": "^13.1.1",
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
     "shortid": "^2.2.15",
