--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "types": "dist/Main.d.ts",
   "scripts": {
     "build": "tsc",
-    "watch": "jest --watch",
+    "lint": "tslint --project .",
     "play": "ts-node _play",
+    "prepare": "npm run build",
     "test": "jest",
-    "lint": "tslint --project ."
+    "watch": "jest --watch"
   },
   "repository": {
     "type": "git",
