--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "lint": "tslint --project .",
     "play": "ts-node _play",
+    "prepare": "npm run build",
     "test": "jest",
     "watch": "jest --watch"
   },
